<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundDark">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/CED"
                android:id="@+id/select_method_type"/>

            <Spinner
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/select_method_type"
                android:contentDescription="@string/FSU"
                android:id="@+id/select_method_group"/>

            <Button
                android:text="@string/send_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="uploadData"
                android:id="@+id/send_data"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_toEndOf="@+id/select_method_type"
                android:layout_marginStart="9dp"
                android:layout_marginTop="20dp"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:layout_alignTop="@+id/unneeded_data_text"
                android:layout_alignStart="@+id/select_method_group"
                android:layout_marginTop="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/gridLayout">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="User/Fleet/Org Name"
                    android:textColorHint="@color/textLightHint"
                    android:maxEms="10"
                    android:layout_gravity="start"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:id="@+id/name"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="Manifesto"
                    android:textColorHint="@color/textLightHint"
                    android:maxEms="10"
                    android:layout_gravity="end"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:id="@+id/manifesto"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="E-Mail"
                    android:textColorHint="@color/textLightHint"
                    android:maxEms="10"
                    android:layout_gravity="start"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:id="@+id/email"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="Password"
                    android:textColorHint="@color/textLightHint"
                    android:textColor="@color/textLight"
                    android:maxEms="10"
                    android:layout_gravity="end"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:id="@+id/pass"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="User ID"
                    android:textColorHint="@color/textLightHint"
                    android:maxEms="10"
                    android:layout_gravity="start"
                    android:layout_column="0"
                    android:layout_row="3"
                    android:id="@+id/user_id"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="Squadron ID"
                    android:textColorHint="@color/textLightHint"
                    android:textColor="@color/textLight"
                    android:maxEms="10"
                    android:layout_gravity="end"
                    android:layout_column="1"
                    android:layout_row="3"
                    android:id="@+id/squadron_id"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="Fleet ID"
                    android:textColorHint="@color/textLightHint"
                    android:maxEms="10"
                    android:layout_gravity="start"
                    android:layout_column="0"
                    android:layout_row="4"
                    android:id="@+id/fleet_id"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="Organization ID"
                    android:textColorHint="@color/textLightHint"
                    android:textColor="@color/textLight"
                    android:maxEms="10"
                    android:layout_gravity="end"
                    android:layout_column="1"
                    android:layout_row="4"
                    android:id="@+id/org_id"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="Status ID"
                    android:textColorHint="@color/textLightHint"
                    android:textColor="@color/textLight"
                    android:maxEms="10"
                    android:layout_gravity="end"
                    android:layout_column="1"
                    android:layout_row="5"
                    android:id="@+id/status_id"/>

            </GridLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Not all fields are necessary for every method"
                android:textColor="@color/textLight"
                android:id="@+id/unneeded_data_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_below="@+id/select_method_group"
                android:layout_alignStart="@+id/gridLayout"
                android:layout_marginStart="16dp"/>


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
